[package]
name = "noether"
version = "0.1.1"
description = "Algorithms."
readme = "README.md"
repository = "https://github.com/thelastinuit/noether"
license = "MIT"
authors = ["Luis Ignacio <email@luisignac.io>"]
homepage = "https://github.com/thelastinuit/noether"
keywords = ["algorithms"]

[dependencies]

[badges]
travis-ci = { repository = "thelastinuit/noether", branch = "master" }
